--- a/css/style.css
+++ b/css/style.css
@@ -1347,6 +1347,7 @@ h3.typo1 {
     }
     .banner-text {
         padding: 7em 0em 0em 0em;
+        margin-top: 30px;
     }
     .team {
         padding: 1em 0em 1em 0em;
